--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
     "env": {
         "browser": true,
         "node": true,
-        "amd": true
+        "amd": true,
+        "es6": true
     },
     "rules": {
         "no-alert": 2,
